Updates in joinGame and joinSpecificGame